# SpriteStudio

./: .gitignore  ABOUT  CMakeLists.txt  README.md  build.cmake
.github/: FUNDING.yml
SpriteStudio/: CMakeLists.txt
SpriteStudio/i18n/: sprite_studio_en.ts  sprite_studio_en_US.ts  sprite_studio_fr.ts  sprite_studio_fr_FR.ts  sprite_studio_ja.ts  sprite_studio_ja_JA.ts
SpriteStudio/include/: aboutdialog.h  arrangementmodel.h  extractor.h  gifextractor.h  jsonextractor.h  mainwindow.h  spriteextractor.h
SpriteStudio/include/extractor/: export.h  extractor.h  gifextractor.h  jsonExtractordialog.h  jsonextractor.h  spriteextractor.h
SpriteStudio/src/: aboutdialog.cpp  arrangementmodel.cpp  extractor.cpp  gifextractor.cpp  haiku.PackageInfo.in  jsonextractor.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_animation.cpp  mainwindow_atlas.cpp  mainwindow_callbacks.cpp  mainwindow_events.cpp  mainwindow_frames.cpp  spriteextractor.cpp  version.h.in
SpriteStudio/src/extractor/: .jsonExtractordialog.ui.~undo-tree~  gifextractor.cpp  jsonExtractordialog.cpp  jsonExtractordialog.h  jsonExtractordialog.ui  jsonExtractordialog.ui.autosave  jsonextractor.cpp  spriteextractor.cpp
sample/: ryu.json  sampe.json  test.json
